# docs/swagger.yaml
@@ -3,15 +3,6 @@ info:
 paths:
   /chat:
     get:
-      parameters:
-      - description: userId1
-        in: formData
-        name: userId1
-        type: string
-      - description: userId2
-        in: formData
-        name: userId2
-        type: string
       responses:
         "200":
           description: OK
@@ -197,21 +188,6 @@ paths:
       summary: 获取群的列表
       tags:
       - 用户模块
-  /contact/groupsList:
-    post:
-      parameters:
-      - description: 用户ID
-        in: formData
-        name: userId
-        type: string
-      responses:
-        "200":
-          description: 'code": -1, "message": "获取失败"}'
-          schema:
-            type: string
-      summary: 加载群聊列表
-      tags:
-      - 用户模块
   /contact/joinGroup:
     post:
       parameters:
@@ -299,6 +275,21 @@ paths:
       summary: 好友列表
       tags:
       - 用户模块
+  /groupsList:
+    post:
+      parameters:
+      - description: 用户ID
+        in: formData
+        name: userId
+        type: string
+      responses:
+        "200":
+          description: 'code": -1, "message": "获取失败"}'
+          schema:
+            type: string
+      summary: 加载群聊列表
+      tags:
+      - 用户模块
   /index:
     get:
       responses:
@@ -309,15 +300,22 @@ paths:
       summary: 获取首页
       tags:
       - 首页
-  /login:
-    get:
+  /listInOnePage:
+    post:
+      parameters:
+      - description: 用户ID
+        in: formData
+        name: userId
+        type: string
       responses:
         "200":
-          description: OK
+          description: 'owner": {...}, "contactList": [...], "onLineList": [...],
+            "groupList": [...]}'
           schema:
             type: string
+      summary: 给前端呈现列表
       tags:
-      - 登录
+      - 界面模块
   /toRegister:
     post:
       responses:
@@ -333,7 +331,7 @@ paths:
       parameters:
       - description: 用户名
         in: formData
-        name: name
+        name: username
         type: string
       - description: 密码
         in: formData
@@ -370,7 +368,17 @@ paths:
       summary: 删除用户
       tags:
       - 用户模块
-  /user/findUserByPhoneAndPwd:
+  /user/getUserList:
+    get:
+      responses:
+        "200":
+          description: OK
+          schema:
+            type: string
+      summary: 获取所有用户
+      tags:
+      - 用户模块
+  /user/login:
     post:
       parameters:
       - description: 手机号码
@@ -387,16 +395,6 @@ paths:
           schema:
             type: string
       summary: 用户登录
-      tags:
-      - 用户模块
-  /user/getUserList:
-    get:
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: 获取所有用户
       tags:
       - 用户模块
   /user/updateUser:
